--- a/index.html
+++ b/index.html
@@ -1,8 +1,30 @@
-<html>
-	<head>
-		<title>Code Seed</title>
-	</head>
-	<body>
-		<p>Hello World</p>
-	</body>
-</html>
+---
+layout: default
+title: Home
+---
+<div class="jumbotron">
+  <div class="container">
+    <h1>{{ site.github.project_title }}</h1>
+    <p>{{ site.github.project_tagline }}</p>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Tools for Java Developers</h2>
+      <p>
+        Right now we are focused on improving the Java development experience. 
+        Hopefully we can expand out into other languages in the future.
+      </p>
+    </div>
+    <div class="col-md-6">
+      <h2>Configuration</h2>
+      <p>
+        Configuration is our first module. The idea is simple: define an 
+        interface (or interfaces) with your application's configuration parameters 
+        as the methods. Write your code against the interface and let us take care of the rest!
+      </p>
+      <p>Links are coming soon.</p>
+    </div>
+  </div>
+</div>
