--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: Home
 ---
 <div class="jumbotron">
   <div class="container">
-    <h1>{{ site.github.project_title }}</h1>
-    <p>{{ site.github.project_tagline }}</p>
+    <h1>{{ site.title }}</h1>
+    <p>{{ site.tagline }}</p>
   </div>
 </div>
 <div class="container">
