Add link to configuration project page

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@ title: Home
     <div class="col-md-6">
       <h2>Configuration</h2>
       <p>
-        Configuration is our first module. The idea is simple: define an 
-        interface (or interfaces) with your application's configuration parameters 
-        as the methods. Write your code against the interface and let us take care of the rest!
+        Configuration is the first module. The idea is simple: define an 
+        interface (or interfaces) with your application's configuration 
+        parameters as the methods. Write your code against the interface and let 
+        us take care of the rest!
       </p>
-      <p>Links are coming soon.</p>
+      <p><a href="{{ site.baseurl }}/configuration/">Visit project page</a></p>
     </div>
   </div>
 </div>
