First pass at adding Craftsman to the Code Seed site

--- a/index.html
+++ b/index.html
@@ -11,21 +11,18 @@ title: Home
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <h2>Tools for Java Developers</h2>
-      <p>
-        Right now we are focused on improving the Java development experience. 
-        Hopefully we can expand out into other languages in the future.
-      </p>
-    </div>
-    <div class="col-md-6">
       <h2>Configuration</h2>
       <p>
-        Configuration is the first module. The idea is simple: define an 
-        interface (or interfaces) with your application's configuration 
-        parameters as the methods. Write your code against the interface and let 
-        us take care of the rest!
+        Configuration is dynamic implementation for interfaces that define the user customizable contract of your application. Define the interfaces and let Configuration provide the implementation.
       </p>
       <p><a href="{{ site.baseurl }}/configuration/">Visit project page</a></p>
+    </div>
+    <div class="col-md-6">
+      <h2>Craftsman</h2>
+      <p>
+        Craftsman is a code generator for state bearing objects. Start with abstract Java objects and let Craftsman build the concrete implementations.
+      </p>
+      <p><a href="{{ site.baseurl }}/craftsman/">Visit project page</a></p>
     </div>
   </div>
 </div>
