WIP out the site, remove subprojects

--- a/index.html
+++ b/index.html
@@ -10,19 +10,9 @@ title: Home
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
-      <h2>Configuration</h2>
-      <p>
-        Configuration is dynamic implementation for interfaces that define the user customizable contract of your application. Define the interfaces and let Configuration provide the implementation.
-      </p>
-      <p><a href="{{ site.baseurl }}/configuration/">Visit project page</a></p>
-    </div>
-    <div class="col-md-6">
-      <h2>Craftsman</h2>
-      <p>
-        Craftsman is a code generator for state bearing objects. Start with abstract Java objects and let Craftsman build the concrete implementations.
-      </p>
-      <p><a href="{{ site.baseurl }}/craftsman/">Visit project page</a></p>
-    </div>
+    <h2>Work In Progress</h2>
+    <p>
+      Code Seed is back to a Work-In-Progress while I sort a few things out.
+    </p>
   </div>
 </div>
